--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.7",
+    "@vueuse/core": "^10.4.1",
     "quasar": "^2.12.7",
     "vue": "^3.3.4"
   },
